# nucleo-f429zi-rust-workspace

./: Cargo.toml  README.md  memory.x  openocd.cfg  rust-toolchain
examples/: blinky.rs  ip.rs  mcp4922.rs  mem2mem_dma.rs  pktgen.rs  serial.rs  ssd1306.rs  wave_data.rs  wm8960.rs
wm8960/: Cargo.toml
wm8960/src/: lib.rs  register.rs  wave_header.rs
