[package]
edition = "2018"
readme = "README.md"
version = "0.1.0"
name = "nucleo-f429zi-rust-workspace"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-halt = "0.2"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f429"]
version = "0.6"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.ssd1306]
features = ["graphics"]
version = "0.3.0-alpha.2"

[dependencies.embedded-graphics]
version = "0.6.0-alpha.2"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
