[package]
edition = "2018"
readme = "README.md"
version = "0.1.0"
name = "nucleo-f429zi-rust-workspace"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-semihosting = "0.5"
mcp49xx = "0.1"
#log = "0.4"

[dependencies.wm8960]
path = "./wm8960"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f429"]
git = "https://github.com/jonlamb-gh/stm32f4xx-hal.git"
branch = "home-phone-changes"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.ssd1306]
features = ["graphics"]
version = "0.3.0-alpha.2"

[dependencies.embedded-graphics]
version = "0.6.0-alpha.2"

[dependencies.stm32-eth]
features = ["nucleo-f429zi", "smoltcp-phy"]
git = "https://github.com/jonlamb-gh/stm32-eth.git"
branch = "update-deps"

[dependencies.smoltcp]
version = "0.5.0"
default-features = false
features = ["proto-ipv4", "proto-ipv6","socket-icmp", "socket-udp", "socket-tcp", "log", "verbose"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
