[package]
name = "wm8960"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f429"]
git = "https://github.com/jonlamb-gh/stm32f4xx-hal.git"
branch = "home-phone-changes"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.nom]
version = "5.0"
default-features = false
features = []
